move tooltips lower to avoid overlap with the related element

--- a/css/theming.css
+++ b/css/theming.css
@@ -165,3 +165,6 @@ header .header-right #contactsmenu {
 	left: 0;
 	top: 0;
 }
+div[role=tooltip] {
+	top: 50px !important;
+}
